tests/lean/evalSorry.lean.expected.out
1
evalSorry.lean:5:33-5:34: error: application type mismatch
  f x
argument
  x
has type
  String : Type
but is expected to have type
  Nat : Type
evalSorry.lean:7:0-7:5: error: aborting evaluation since the expression depends on the 'sorry' axiom, which can lead to runtime instability and crashes.

To attempt to evaluate anyway despite the risks, use the '#eval!' command.
evalSorry.lean:11:0-11:5: error: aborting evaluation since the expression depends on the 'sorry' axiom, which can lead to runtime instability and crashes.

To attempt to evaluate anyway despite the risks, use the '#eval!' command.
